@@ -126,30 +126,26 @@ class Checkpointer extends Daemon {
   // The main work loop
   //
   public void run() {
-    // Check the size of the edit log once every 5 minutes.
-    long periodMSec = 5 * 60;   // 5 minutes
-    if(checkpointPeriod < periodMSec) {
-      periodMSec = checkpointPeriod;
-    }
-    periodMSec *= 1000;
+    final long fiveMinMS = 5 * 60 * 1000; // How often to poll edits size
+    final long periodMS = checkpointPeriod * 1000; // How often to checkpoint, regardless of edits' size
+    long lastCheckpointTimeMS = backupNode.shouldCheckpointAtStartup() ? 0 : now();
+    long lastSizeCheckMS = now();
 
-    long lastCheckpointTime = 0;
-    if(!backupNode.shouldCheckpointAtStartup())
-      lastCheckpointTime = now();
     while(shouldRun) {
       try {
         long now = now();
-        boolean shouldCheckpoint = false;
-        if(now >= lastCheckpointTime + periodMSec) {
-          shouldCheckpoint = true;
-        } else {
-          long size = getJournalSize();
-          if(size >= checkpointSize)
-            shouldCheckpoint = true;
+        boolean editsTooBig = false;
+        boolean periodExpired = now >= lastCheckpointTimeMS + periodMS;
+
+        if(now >= lastSizeCheckMS + fiveMinMS) {
+          editsTooBig = getJournalSize() > checkpointSize;
+          lastSizeCheckMS = now;
         }
-        if(shouldCheckpoint) {
+
+        if(periodExpired || editsTooBig) {
           doCheckpoint();
-          lastCheckpointTime = now;
+          lastCheckpointTimeMS = now;
+          lastSizeCheckMS = now;
         }
       } catch(IOException e) {
         LOG.error("Exception in doCheckpoint: ", e);
@@ -159,7 +155,7 @@ class Checkpointer extends Daemon {
         break;
       }
       try {
-        Thread.sleep(periodMSec);
+        Thread.sleep(Math.min(fiveMinMS, periodMS));
       } catch(InterruptedException ie) {
         // do nothing
       }
